Changes for Perl Application Development and Refactoring Environment
NOTE: Do not "tidy" or change the indenting here, or we break svn annotate

0.60 To Be Released
    - Add FTP connection caching/sharing (SEWI)
    - Add interactive template functions (SEWI)


0.59 2010.03.31 
    - Don't crash open file list dialog on unsaved files or without
      files (SEWI)
    - Added a small survey for new Padre installation (SEWI)
    - Resolved the clash between threads and SQLite by temporarily
      disconnecting from SQLite during a thread spawn (ADAMK)
    - Slave master quick-spawning in Padre::Startup, so that
      we get smaller thread spawn memory penalty from the
      interpreter copy. On Win32 the per-thread cost drops from
      34.1meg to 20meg with a reduction in total memory use for a
      typical user of about 20% (ADAMK)
    - Add language names/translated texts to select_language list (SEWI)
    - Fixed ticket #865 Wrong document type in View Document As (PLAVEN)
    - New Padre::Wx::Display screen geometry library for handling multiple
      screens, weird geometry setups and other weird stuff that coders
      have on their development setups. Padre's main window uses this to
      calculate an elegant golden-ratio uniform-margin default position
      and size (ADAMK)
    - When showing a toolbar panel for the first time, make sure it's lock
      state is consistent with the main_lockinterface config setting (ADAMK)
    - Local file and remote file installation switched from pip to
      cpanm (ADAMK)
    - Completed the 'Insert Special Value' functionality (Zeno Gantner)
    - Updated German translation (Zeno Gantner)
    - When refresh_windowlist was sped up, sorting regressed. Fixed (ADAMK)
    - Fixed ticket #889: Padre saves non-ASCII characters as \x{XXXX} (AZAWAWI)
    - New Win32 launcher #677: the Padre process is now named "padre.exe"
      in the Task Manager (instead of wperl.exe) and it embeds the Perl